--- a/uboot-mtk-20230718-09eda825/configs/mt7981_comfast_cf-e593ax_defconfig
+++ b/uboot-mtk-20230718-09eda825/configs/mt7981_comfast_cf-e593ax_defconfig
@@ -8,6 +8,7 @@ CONFIG_NR_DRAM_BANKS=1
 CONFIG_ENV_SIZE=0x20000
 CONFIG_ENV_OFFSET=0x0
 CONFIG_DEFAULT_DEVICE_TREE="mt7981-comfast-cf-e593ax"
+CONFIG_SYS_PROMPT="MT7981> "
 CONFIG_TARGET_MT7981=y
 CONFIG_DEBUG_UART_BASE=0x11002000
 CONFIG_DEBUG_UART_CLOCK=40000000
@@ -16,44 +17,44 @@ CONFIG_PCI=y
 CONFIG_DEBUG_UART=y
 CONFIG_ENV_VARS_UBOOT_CONFIG=y
 CONFIG_MEDIATEK_BOOTMENU=y
+CONFIG_MEDIATEK_BOOTMENU_DELAY=3
 CONFIG_MTK_WEB_FAILSAFE=y
 CONFIG_MTK_WEB_FAILSAFE_AFTER_BOOT_FAILURE=y
 CONFIG_MTK_UBI_SUPPORT=y
 CONFIG_MTK_UPGRADE_BL2_VERIFY=y
-CONFIG_MTK_UPGRADE_FIP_VERIFY=y
+# CONFIG_MTK_UPGRADE_IMAGE_VERIFY is not set
 CONFIG_ENABLE_NAND_NMBM=y
 CONFIG_FIT=y
 CONFIG_AUTOBOOT_MENU_SHOW=y
 CONFIG_AUTOBOOT_MENU_MTK_SHOW=y
 CONFIG_DEFAULT_FDT_FILE="mt7981-spim-nand-rfb"
-CONFIG_SYS_CBSIZE=512
-CONFIG_SYS_PBSIZE=1049
 CONFIG_LOGLEVEL=7
 CONFIG_LOG=y
 CONFIG_HUSH_PARSER=y
-CONFIG_SYS_PROMPT="MT7981> "
+CONFIG_SYS_CBSIZE=512
+CONFIG_SYS_PBSIZE=1049
 # CONFIG_BOOTM_NETBSD is not set
 # CONFIG_BOOTM_PLAN9 is not set
 # CONFIG_BOOTM_RTEMS is not set
 # CONFIG_BOOTM_VXWORKS is not set
 # CONFIG_CMD_ELF is not set
 CONFIG_CMD_MEMINFO=y
-# CONFIG_CMD_XIMG is not set
 # CONFIG_CMD_UNLZ4 is not set
 # CONFIG_CMD_UNZIP is not set
+# CONFIG_CMD_FLASH is not set
 CONFIG_CMD_GPIO=y
 CONFIG_CMD_GPIO_READ=y
 CONFIG_CMD_PWM=y
-CONFIG_CMD_I2C=y
 CONFIG_CMD_MTD=y
 CONFIG_CMD_NMBM=y
 CONFIG_CMD_TFTPPUT=y
-CONFIG_CMD_PCI=y
 CONFIG_CMD_PING=y
 CONFIG_CMD_SMC=y
 CONFIG_CMD_MTDPARTS=y
 CONFIG_MTDIDS_DEFAULT="nmbm0=nmbm0"
 CONFIG_MTDPARTS_DEFAULT="nmbm0:1024k(bl2),512k(u-boot-env),2048k(factory),2048k(fip),65536k(ubi)"
+CONFIG_CMD_GL_BTN=y
+CONFIG_OF_EMBED=y
 CONFIG_ENV_OVERWRITE=y
 CONFIG_ENV_IS_IN_MTD=y
 CONFIG_ENV_MTD_NAME="u-boot-env"
@@ -69,13 +70,13 @@ CONFIG_SERVERIP="192.168.1.2"
 CONFIG_PROT_TCP=y
 CONFIG_REGMAP=y
 CONFIG_SYSCON=y
+CONFIG_BUTTON=y
+CONFIG_BUTTON_GPIO=y
 CONFIG_CLK=y
+# CONFIG_I2C is not set
 CONFIG_LED=y
 CONFIG_LED_BLINK=y
 CONFIG_LED_GPIO=y
-CONFIG_DM_I2C=y
-CONFIG_I2C_SET_DEFAULT_BUS_NUM=y
-CONFIG_SYS_I2C_MTK=y
 # CONFIG_MMC is not set
 CONFIG_DM_MTD=y
 CONFIG_MTD_SPI_NAND=y
@@ -97,6 +98,9 @@ CONFIG_PINCONF=y
 CONFIG_PINCTRL_MT7981=y
 CONFIG_POWER_DOMAIN=y
 CONFIG_MTK_POWER_DOMAIN=y
+CONFIG_DM_REGULATOR=y
+CONFIG_DM_REGULATOR_FIXED=y
+CONFIG_DM_REGULATOR_GPIO=y
 CONFIG_DM_PWM=y
 CONFIG_PWM_MTK=y
 CONFIG_DM_SERIAL=y
@@ -104,5 +108,6 @@ CONFIG_MTK_SERIAL=y
 CONFIG_SPI=y
 CONFIG_DM_SPI=y
 CONFIG_MTK_SPIM=y
+CONFIG_TIMER=y
+CONFIG_MTK_TIMER=y
 CONFIG_HEXDUMP=y
-# CONFIG_EFI_LOADER is not set
